--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>startPage</title>
 
-    <link rel="stylesheet" href="../static/indexPage.css">
+    <link rel="stylesheet" href="../static/indexPage.css" th:href="'/indexPage.css'">
 
 </head>
 <body>
