displays list of 20 fake restaurants on first page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,8 @@
 
 <h1>Jul på hjul</h1>
 
+<p th:each="restaurant:${restaurants}" th:text="${restaurant.name}">This should be replaced by restaurant names</p>
+
 
 </body>
 </html>
