Added form to login viewer

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,11 @@
 
 <h1>Jul på hjul</h1>
 
+<div class = "front"><ul>
+    <li><a href="/login">Login</a></li>
+</ul></div>
+
+
 <p th:each="restaurant:${restaurants}" th:text="${restaurant.name}">This should be replaced by restaurant names</p>
 
 
