--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -11,3 +11,20 @@ h1 {
     padding: 15px;
 
 }
+
+.backgroundImage {
+    background-image:url("../static/backgrond_malmo.jpg");
+    width:100%;
+    background-color:red;
+
+}
+
+.restaurantCard {
+    border: 2px solid #039C31;
+    width:20%
+    height:100px;
+    margin:20px;
+
+
+
+}
