--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -9,30 +9,27 @@ h1 {
     background-color: #c21f1f;
     color: white;
     padding: 15px;
+    margin:0px;
+    }
 
-}
+img {
+    max-width:100%;
+    height:auto;
+    }
 
 .backgroundImage {
-    background-image:url("../static/backgrond_malmo.jpg");
-    width:100%;
-    background-color:red;
+    background-image: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0.5));
+   }
 
 .front, th, td {
     border: 1px solid black;
     width:10%
-.backgroundImage {
-    background-image:url("../static/backgrond_malmo.jpg");
-    width:100%;
-    background-color:red;
+    }
 
-}
 
 .restaurantCard {
     border: 2px solid #039C31;
     width:20%
     height:100px;
     margin:20px;
-
-
-
 }
