--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -12,13 +12,40 @@ h1 {
     margin:0px;
     }
 
+#title {
+    display:block;
+    #width:100%;
+    margin:auto;
+    background-color: #c21f1f;
+}
+
+.title {
+    width:100%;
+    background-color: #c21f1f;
+}
+
 img {
     max-width:100%;
     height:auto;
+    z-value:-1;
     }
 
+.selectArea {
+    background-color:white;
+    position:absolute;
+    top: 30%;
+    left:38%;
+    padding:20px;
+    border-radius:15px;
+
+    font-family:
+    font-family: "Questa Grande", "Palatino Linotype", serif;
+    font-size: 24px;
+    font-weight:bold;
+}
+
 .backgroundImage {
-    background-image: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0.5));
+    #background-image: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0.5));
    }
 
 .front, th, td {
