--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -3,7 +3,17 @@ h1 {
 
     font-family: "Questa Grande", "Palatino Linotype", serif;
     font-size: 40px;
-     text-align: center;
+    text-align: center;
+    display:block;
+    background-color: #c21f1f;
+    color: white;
+    padding: 15px;
+    margin:0px;
+    }
+
+.front {
+    font-family: "Questa Grande", "Palatino Linotype", serif;
+    font-size: 15px;
 
     display:block;
     background-color: #c21f1f;
@@ -11,6 +21,7 @@ h1 {
     padding: 15px;
     margin:0px;
     }
+
 
 img {
     max-width:100%;
@@ -20,11 +31,6 @@ img {
 .backgroundImage {
     background-image: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0.5));
    }
-
-.front, th, td {
-    border: 1px solid black;
-    width:10%
-    }
 
 
 .restaurantCard {
