--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,15 +8,16 @@
 
 </head>
 <body>
+<div class = "front">
+    <span><a href="/login">Login</a></span><br>
+    <span><a href="/addRestaurant">Add Restaurant</a></span>
+</div>
 <h1>Jul på hjul</h1>
 
 
 
+<img src="bakgrund_malmo.jpg" class="backgroundImage">
 
-<img src="../static/bakgrund_malmo.jpg" class="backgroundImage">
-<div class = "front"><ul>
-    <li><a href="/login">Login</a></li>
-</ul></div>
 
 <p th:each="restaurant:${restaurants}" th:text="${restaurant.name}">This should be replaced by restaurant names</p>
 
