--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -47,9 +47,14 @@ img {
     #background-image: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0.5));
    }
 
-.front, th, td {
-    border: 1px solid black;
-    width:10%
+.front {
+      font-family: "Questa Grande", "Palatino Linotype", serif;
+        font-size: 15px;
+        display:block;
+        background-color: #c21f1f;
+        color: white;
+        padding: 15px;
+        margin:0px;
     }
 
 
