--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -3,14 +3,20 @@ h1 {
 
     font-family: "Questa Grande", "Palatino Linotype", serif;
     font-size: 40px;
-     text-align: center;
+    #text-align: center;
 
-    display:block;
-    background-color: #c21f1f;
-    color: white;
-    padding: 15px;
-    margin:0px;
+    #display:block;
+    #background-color: #c21f1f;
+    color: black;
+    #padding: 15px;
+    #margin:0px;
     }
+
+h2 {
+    font-family: "Questa Grande", "Palatino Linotype", serif;
+    font-size: 24px;
+    font-weight:bold;
+}
 
 #title {
     display:block;
@@ -44,19 +50,35 @@ img {
     font-weight:bold;
 }
 
-.backgroundImage {
-    #background-image: linear-gradient(to right, rgba(0,0,0,0), rgba(0,0,0,0.5));
-   }
 
 .front, th, td {
     border: 1px solid black;
     width:10%
+    position:absolute;
+    top:20%;
     }
 
+.cardContainer {
+    width:49%;
+    height:600px;
+    #position:relative;
+    display:inline-block;
+}
+
+.mapContainer {
+    border: 2px solid #039C31;
+    width:49%;
+    height:600px;
+    #position:relative:
+    display:inline-block;
+    float:right;
+}
 
 .restaurantCard {
     border: 2px solid #039C31;
-    width:20%
+    width:200px;
     height:100px;
     margin:20px;
+    padding:20px;
+    float:left;
 }
