--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,7 +7,8 @@
 </head>
 <a href="/">Back to Home page</a>
 <center>
-    <h1> Login page</h1>
+    <div class="login">
+    <h1 id="headerlogin"> Login page</h1></div>
     <form action="/login" method="POST">
         <input type="text" name="username" placeholder="username"/>
         <input type="password" name="password" placeholder="password"/>
