Added links to Login and Book a table sites. Added name and picture of the restaurant.

--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="indexPage.css">
+    <title>Restaurant details</title>
 </head>
 <body>
+<div class="front">
+    <span><a href="/login">Login</a></span><br>
+    <span><a href="/Bookingsform">Book a table</a></span>
+</div>
+<h1>Sankt Gertrud</h1>
+
+<div class="picture">
+    <img src="https://sanktgertrud.se/_files/200000384-afc99b0c46/450/6ce7ch.jpg">
+</div>
+
 
 </body>
 </html>
