--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,11 +5,12 @@
     <link rel="stylesheet" href="indexPage.css">
     <title>Login</title>
 </head>
-<a href="/">Back to Home page</a>
-<center>
+
+
     <div class="login">
-    <h1 id="headerlogin"> Login page</h1></div>
-    <form action="/login" method="POST">
+        <span><a href="/">Back to Home page</a></span>
+        <center><h1 id="headerlogin"> Login page</h1></div><center>
+   <center><form action="/login" method="POST">
         <input type="text" name="username" placeholder="username"/>
         <input type="password" name="password" placeholder="password"/>
         <input type="submit" value="login"/>
