--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,9 +14,9 @@
 </div>
 
 <div class="title">
-    <span th:if="${username == null}"><a href="/login">Login</a></span>
-    <span th:if="${username != null}"><a href="/logout">Logout</a></span>
-    <br><span><a href="/addRestaurant">Add Restaurant</a></span>
+    <span th:if="${session.username == null}"><a href="/login">Login</a></span>
+    <span th:if="${session.username != null}"><a href="/logout">Logout</a></span>
+    <br><span th:if="${session.username != null}"><a href="/addRestaurant">Add Restaurant</a></span>
     <img src="../static/title.jpg" id="title" th:src="${'/title.jpg'}">
 </div>
 
