Added function for Tomterating.

--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -12,9 +12,28 @@
 </div>
 <h1>Sankt Gertrud</h1>
 
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span>
+<span class="fa fa-star"></span>
+
 <div class="picture">
     <img src="https://sanktgertrud.se/_files/200000384-afc99b0c46/450/6ce7ch.jpg">
 </div>
+<h3>Tomterating</h3>
+<span class="starRating">
+  <input id="rating5" type="radio" name="rating" value="5">
+  <label for="rating5">🎅🎅🎅🎅🎅</label><br>
+  <input id="rating4" type="radio" name="rating" value="4">
+  <label for="rating4">🎅🎅🎅🎅</label><br>
+  <input id="rating3" type="radio" name="rating" value="3">
+  <label for="rating3">🎅🎅🎅</label><br>
+  <input id="rating2" type="radio" name="rating" value="2">
+  <label for="rating2">🎅🎅</label><br>
+  <input id="rating1" type="radio" name="rating" value="1">
+  <label for="rating1">🎅</label>
+</span>
 
 
 </body>
