--- a/src/main/resources/templates/Bookingform.html
+++ b/src/main/resources/templates/Bookingform.html
@@ -2,26 +2,14 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="indexPage.css">
     <title>Booking</title>
 </head>
 <body>
 
 <form action="/Bookingform" method="POST" th:object="${julpahjul}">
-    Name: <input type="text" th:field="*{name}"/>
-    Time: <select th:field="*{time}">
-    <option value="11:30">11:30</option>
-    <option value="12:30">12:30</option>
-    <option value="17:00">17:00</option>
-    <option value="17:30">17:30</option>
-    <option value="18:00">18:00</option>
-    <option value="19:00">19:00</option>
-    <option value="19:30">19:30</option>
-    <option value="20:00">20:00</option>
-    <option value="20:30">20:30</option>
-    <option value="21:00">21:00</option>
-</select>
-    E-post: <input type=" checkbox" th:field="*{e-post}"/>
-    How many are you?: <select th:field="*{how many are you?}">
+
+    People: <select th:field="*{People}">
     <option value="1">1</option>
     <option value="2">2</option>
     <option value="3">3</option>
@@ -34,12 +22,61 @@
     <option value="10">10</option>
 </select>
 
-    <input type="submit" value="add"/>
 
+    Day: <select th:field="*{day}">
+    <option value="2019-11-21">2019-11-21</option>
+    <option value="2019-11-21">2019-11-21</option>
+    <option value="2019-11-21">2019-11-21</option>
+    <option value="2019-11-21">2019-11-21</option>
+    <option value="2019-11-21">2019-11-21</option>
+    <option value="2019-11-21">2019-11-21</option>
+    <option value="2019-11-21">2019-11-21</option>
+    <option value="2019-11-21">2019-11-21</option>
+    <option value="2019-11-21">2019-11-21</option>
+    <option value="12019-11-21">2019-11-21</option>
+</select>
+
+
+    Choose a Time: <select th:field="*{choose a time}">
+    <option value="11:30">11:30</option>
+    <option value="12:30">12:30</option>
+    <option value="17:00">17:00</option>
+    <option value="17:30">17:30</option>
+    <option value="18:00">18:00</option>
+    <option value="19:00">19:00</option>
+    <option value="19:30">19:30</option>
+    <option value="20:00">20:00</option>
+    <option value="20:30">20:30</option>
+    <option value="21:00">21:00</option> <br>
+</select>
+    </br>
 
 </form>
 
+<h2>Complete your reservation</h2>
 
+<form action="/action_page.php">
+    E-mail:<br>
+    <input type="text" name="E-mail:">
+    <br>
+    First name:<br>
+    <input type="text" name="firstname">
+    <br>
+    Last name:<br>
+    <input type="text" name="lastname">
+    <br>
+
+    Phonenumber: <br>
+    <input id="telNo" name="telNo" type="tel" placeholder="+46-274 21 37">
+     <br>
+
+    <input type="submit" value="Reserve now"/> <br>
+
+
+
+
+
+</form>
 
 </body>
 </html>
