typo fixed in index.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,7 +47,7 @@
     <form action="/filter_restaurants" method="post">
         <input type="checkbox" name="stroller">Visa endast barnvagnsvänliga
         <input type="checkbox" name="wheelchar">Visa endast rullstolsvänliga
-        <input type="submit" text="Filtrer">
+        <input type="submit" text="Filtrera">
 
 
 
