fixed layout to add restaurant

--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -79,12 +79,24 @@ img {
 
 .login {
     display:block;
-
     #width:100%;
     margin:auto;
     background-color: #c21f1f;
 }
 
 #headerlogin {
+    color:#ffffff;
+}
+
+
+
+.addRestaurant {
+        display:block;
+        #width:100%;
+        margin:auto;
+        background-color: #c21f1f;
+}
+
+#headeraddrestaurant {
     color:#ffffff;
 }
