--- a/src/main/resources/templates/addRestaurant.html
+++ b/src/main/resources/templates/addRestaurant.html
@@ -6,19 +6,25 @@
     <title>Add Restaurant</title>
 </head>
 <body>
-<form action="/addRestaurant" method="POST">
+
+<div class="addRestaurant">
+    <span><a href="/">Back to Home page</a></span>
+    <center><h1 id="headeraddrestaurant"> Add Restaurant</h1></center></div>
+<center><form action="/addRestaurant" method="POST">
     <input type="text" name="name"  placeholder="Namn på restaurant"/><br>
     <input type="text" name="description" placeholder="Beskrivning av restaurang"/><br>
     <input type="text" name="adress" placeholder="Address"/><br>
     <input type="text" name="linkToWebsite" placeholder="Länk till hemsida"/><br>
     <input type="submit" value="Lägg till restaurang"/>
 </form>
+</center>
 
 <br>
-
+<center>
 <ul th:each="name : ${session.restaurants}" th:text="${name}">
     <li th:text="${name}"></li>
 </ul>
+</center>
 
 </body>
 </html>
