--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
 
     <div class="login">
         <span><a href="/">Back to Home page</a></span>
-        <center><h1 id="headerlogin"> Login page</h1></div><center>
+        <center><h1 id="headerlogin"> Login page</h1></center></div>
    <center><form action="/login" method="POST">
         <input type="text" name="username" placeholder="username"/>
         <input type="password" name="password" placeholder="password"/>
