fixed so you can filter restaurants

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,8 +45,8 @@
     <h2>Malmös högst rankade julbord just nu:</h2>
 
     <form action="/filter_restaurants" method="post">
-        <input type="checkbox" name="stroller">Visa endast barnvagnsvänliga
-        <input type="checkbox" name="wheelchar">Visa endast rullstolsvänliga
+        <input type="checkbox" name="stroller" value="true">Visa endast barnvagnsvänliga
+        <input type="checkbox" name="wheelchair" value="true">Visa endast rullstolsvänliga
         <input type="submit" text="Filtrera">
 
 
