added the map, added lat and lng to be auto-generated in the fake repository class (not checked)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -73,9 +73,9 @@
 
 </div>
 
-<div class="mapContainer">
-    Place map here
-</div>
+<div class="mapContainer" id="googleMap"></div>
+<script type="text/javascript" src="script.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbJOvuSQIBXS0IpOR-y16oLoByabvW-_k&callback=myMap"></script>
 
 </body>
 </html>
