tweaked the links (changed color and removed the underline)

--- a/src/main/resources/templates/addRestaurant.html
+++ b/src/main/resources/templates/addRestaurant.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="indexPage.css">
     <title>Add Restaurant</title>
 </head>
+<STYLE>A {text-decoration: none;} </STYLE>
 <body>
 
 <div class="addRestaurant">
