--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="indexPage.css">
     <title>Login</title>
 </head>
+<STYLE>A {text-decoration: none;} </STYLE>
 
 
     <div class="login">
