--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="indexPage.css" th:href="'/indexPage.css'">
 
 </head>
+<STYLE>A {text-decoration: none;} </STYLE>
 <body>
 
 <div class = "front">
