--- a/src/main/resources/templates/Confirmation.html
+++ b/src/main/resources/templates/Confirmation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="indexPage.css">
@@ -8,7 +8,7 @@
 <body>
 
 <h2> Thank you for your reservation </h2>
-<h3></h3>
+<h3 th:text="${booking.firstname}"></h3>
 
 </body>
 </html>
