Added star rating, description and preferences icons.

--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -5,22 +5,60 @@
     <link rel="stylesheet" href="indexPage.css">
     <title>Restaurant details</title>
 </head>
+<!-- Font Awesome Icon Library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
 <body>
 <div class="front">
     <span><a href="/login">Login</a></span><br>
     <span><a href="/Bookingsform">Book a table</a></span>
 </div>
 <h1>Sankt Gertrud</h1>
+<div class="rating">
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star checked"></span>
+    <span class="fa fa-star"></span>
+    <span class="fa fa-star"></span>
+    <span class="rating_count">(345 recensioner)</span>
+</div>
+<br>
+<div class="restaurant_address">Östergatan 7B,  211 25 Malmö</div>
+<br>
 
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star"></span>
-<span class="fa fa-star"></span>
 
 <div class="picture">
     <img src="https://sanktgertrud.se/_files/200000384-afc99b0c46/450/6ce7ch.jpg">
 </div>
+
+<!-- Preferences -->
+<br>
+<div class="preferences">
+<i class="fas fa-baby-carriage"></i>
+<i class="fas fa-wheelchair"></i>
+<i class="fas fa-baby"></i>
+
+</div>
+<div class="description">
+    <p><strong>På Sankt Gertrud serverar vi ett julbord som smakar precis lika bra för den klassiska
+    julbordsfantasten som för den som hellre vill ha ett grönare julbord. Sillar med lök,
+    senap och dill står bredvid de veganska sillalternativen. Laxar i alla smaker tillsammans med getostpatéer,
+    kikärtsbullar och allehanda syltor, korvar för alla, köttbullar och både vanlig och vegansk Jansson.
+        Och en hel massa annat gott, grönt och sött.</strong></p>
+    <p>På våra kullerstensgårdar mitt i Malmö, bara ett stenkast från Centralen, blir julstämningen påtaglig.
+    Under granrisgirlanger mellan de gamla korsvirkeslängorna kan du njuta av glöggen först och därefter
+    smaka dig runt bland alla våra hemmalagade godsaker under kristallkronor och takbjälkar.</p>
+    <p>Oavsett om ni är fyra eller tvåhundra som vill spisa julmat tillsammans ordnar vi detta.
+    Och vill ni ha en alldeles egen lokal för er grupp har vi många att välja mellan.<p>
+    <p>Vi öppnar upp vår juliga gård och julskrudade lokaler den 20 november och avslutar den 21 december.
+    Onsdagar till lördagar serverar vi våra julbord.<br><br>Varmt välkomna hem till oss på Sankt Gertrud!</p>
+    <p>Pris:<strong> 555 kr</strong> (inkl. moms)</p>
+    <em>Varmt välkommen!</em>
+    <p><img src="https://julbordsguiden.se/images/2018_Julbord/Loggor/Sankt_Gertrud_logotyp.png" alt="Sankt Gertrud logotyp"></p>
+</div>
+
 <h3>Tomterating</h3>
 <span class="starRating">
   <input id="rating5" type="radio" name="rating" value="5">
@@ -34,6 +72,7 @@
   <input id="rating1" type="radio" name="rating" value="1">
   <label for="rating1">🎅</label>
 </span>
+
 
 
 </body>
