added thymeleaf to links in add restaurant viewer and login viewer

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="indexPage.css">
+    <link rel="stylesheet" href="../static/indexPage.css" th:href ="'/indexPage.css'">
     <title>Login</title>
 </head>
 <STYLE>A {text-decoration: none;} </STYLE>
