--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>startPage</title>
 
-    <link rel="stylesheet" href="indexPage.css" th:href="'/indexPage.css'">
+    <link rel="stylesheet" href="../static/indexPage.css" th:href ="'/indexPage.css'">
 
 </head>
 <STYLE>A {text-decoration: none;} </STYLE>
