--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,7 +46,7 @@
 <div class="cardContainer">
     <h2>Malmös högst rankade julbord just nu:</h2>
 
-    <form action="/filter_restaurants" method="post">
+    <form id="checkboxes" action="/filter_restaurants" method="post">
         <input type="checkbox" name="stroller" value="true">Visa endast barnvagnsvänliga
         <input type="checkbox" name="wheelchair" value="true">Visa endast rullstolsvänliga
         <input type="submit" text="Filtrera">
