--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:Access-Control-Allow-Origin="*">
 <head>
     <meta charset="UTF-8">
     <title>startPage</title>
+    <Access-Control-Allow-Origin: *></Access-Control-Allow-Origin:>
 
     <link rel="stylesheet" href="../static/indexPage.css" th:href="'/indexPage.css'">
     <script type="text/javascript" src="script.js"></script>
