--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -104,3 +104,14 @@ img {
 a {
     color:#ffffff;
 }
+
+.booking {
+    display:block;
+    #width:100%;
+    margin:auto;
+    background-color: #c21f1f;
+}
+
+#headerbooking {
+    color:#ffffff;
+}
