Added GetMapping for restauran't view. Changed color for stars and preferences and size for logo. Deleted unnecessary css file.

--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -104,3 +104,12 @@ img {
 a {
     color:#ffffff;
 }
+
+.preferences {
+    font-size: 30px;
+    color: #c21f1f;
+}
+
+.checked {
+  color: #c21f1f;
+}
