--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -67,17 +67,20 @@
         </div>
 
 
+
+
+
     </div>
 
+    <!--
+        <div class="restaurantCard">Restaurant 1</div>
+        <div class="restaurantCard">Restaurant 2</div>
+        <div class="restaurantCard">Restaurant 3</div>
+    -->
+    </div> <!-- end of cardContainer-->
 
-    <div class="restaurantCard">Restaurant 1</div>
-    <div class="restaurantCard">Restaurant 2</div>
-    <div class="restaurantCard">Restaurant 3</div>
+    <div class="mapContainer" id="googleMap"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbJOvuSQIBXS0IpOR-y16oLoByabvW-_k&callback=myMap"></script>
 
-</div>
-
-<div class="mapContainer" id="googleMap"></div>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbJOvuSQIBXS0IpOR-y16oLoByabvW-_k&callback=myMap"></script>
-
-</body>
-</html>
+    </body>
+    </html>
