--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -119,3 +119,12 @@ a {
 #headerbooking {
     color:#ffffff;
 }
+.confirmation{
+   display:block;
+    #width:100%;
+    margin:auto;
+    background-color: #c21f1f;
+}
+#headerbooking {
+    color:#ffffff;
+}
