--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,11 +31,14 @@
 <form action="/mapChange" method="post" class="selectArea">
     Var vill du äta julbord?
     <select>
-        <option>Centrum</option>
+        <option>Gamla Väster</option>
+        <option>Carolikvarteren</option>
+        <option>Davidshall</option>
         <option>Slottsstaden</option>
+        <option>Möllevången</option>
+        <option>Rådmansvången</option>
+        <option>Slussen</option>
         <option>Värnhem</option>
-        <option>Hyllie</option>
-        <option>Lorensborg</option>
 
     </select>
 
