Added position class

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,15 +31,15 @@
 
 <form action="/mapChange" method="post" class="selectArea">
     Var vill du äta julbord?
-    <select>
-        <option>Gamla Väster</option>
-        <option>Carolikvarteren</option>
-        <option>Davidshall</option>
-        <option>Slottsstaden</option>
-        <option>Möllevången</option>
-        <option>Rådmansvången</option>
-        <option>Slussen</option>
-        <option>Värnhem</option>
+    <select name="mapChange">
+        <option value="gamlaVaster">Gamla Väster</option>
+        <option value="Carolikvarteren">Carolikvarteren</option>
+        <option value="Davidshall">Davidshall</option>
+        <option value="Slottsstaden">Slottsstaden</option>
+        <option value="Mollevangen">Möllevången</option>
+        <option value="Radmansvangen">Rådmansvången</option>
+        <option value="Slussen">Slussen</option>
+        <option value="Varnhem">Värnhem</option>
 
     </select>
 
