--- a/src/main/resources/templates/Confirmation.html
+++ b/src/main/resources/templates/Confirmation.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../static/indexPage.css" th:href="'/indexPage.css'">
-    <title>Confirmation</title>
+    <title>Bekräftelse</title>
 </head>
 
 <STYLE>A {text-decoration: none;} </STYLE>
 
 <body>
 <div class="confirmation">
-<span><a href="/">Back to Home page</a></span>
-<center><h1 id="headerbooking"> Booking page </h1></center></div>
+<span><a href="/">Tillbaka till startsida</a></span>
+<center><h1 id="headerbooking"> Bokningsbekräftelse </h1></center></div>
 
-<center ><h2> Thank you for your reservation </h2>
+<center ><h2> Tack för din bokning! </h2>
 <h3 th:text="${booking.firstname}" ></h3></center>
 
 </body>
