--- a/src/main/resources/static/indexPage.css
+++ b/src/main/resources/static/indexPage.css
@@ -110,10 +110,13 @@ a {
 }
 
 .booking {
+    font-family: "Questa Grande", "Palatino Linotype", serif;
     display:block;
     #width:100%;
     margin:auto;
     background-color: #c21f1f;
+
+
 }
 
 #headerbooking {
@@ -136,5 +139,9 @@ a {
 }
 #headerbooking {
     color:#ffffff;
+}
+
+.select{
+border: 2px solid #039C31;
 }
 
