--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -41,12 +41,14 @@
 <!-- Preferences -->
 <br>
 <div class="preferences">
-<i class="fas fa-baby-carriage"></i>
-<i class="fas fa-wheelchair"></i>
-<i class="fas fa-baby"></i>
-
+    <i class="fas fa-baby-carriage"></i>
+    <i class="fas fa-wheelchair"></i>
+    <i class="fas fa-baby"></i>
 </div>
-<div class="description">
+
+
+<!--description th:text="${restaurant.description}"-->
+<div class="description" >
     <p><strong>På Sankt Gertrud serverar vi ett julbord som smakar precis lika bra för den klassiska
     julbordsfantasten som för den som hellre vill ha ett grönare julbord. Sillar med lök,
     senap och dill står bredvid de veganska sillalternativen. Laxar i alla smaker tillsammans med getostpatéer,
@@ -61,8 +63,8 @@
     Onsdagar till lördagar serverar vi våra julbord.<br><br>Varmt välkomna hem till oss på Sankt Gertrud!</p>
     <p>Pris:<strong> 555 kr</strong> (inkl. moms)</p>
     <em>Varmt välkommen!</em>
-
 </div>
+
 <div class="logo">
     <p><img src="https://julbordsguiden.se/images/2018_Julbord/Loggor/Sankt_Gertrud_logotyp.png" width="200" height="100" alt="Sankt Gertrud logotyp"></p>
 </div>
