--- a/src/main/resources/templates/Confirmation.html
+++ b/src/main/resources/templates/Confirmation.html
@@ -11,7 +11,7 @@
 <body>
 <div class="confirmation">
 <span><a href="/">Tillbaka till startsida</a></span>
-<center><h1 id="headerbooking"> Bokningsbekräftelse </h1></center></div>
+    <center> <img src="../static/bekraftelse.jpg" th:src="${'/bekraftelse.jpg'}"></center></div>
 
 <center ><h2> Tack för din bokning! </h2>
 <h3 th:text="${booking.firstname}" ></h3></center>
