ändrat till svenska

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,22 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../static/indexPage.css" th:href ="'/indexPage.css'">
-    <title>Login</title>
+    <title>Logga in</title>
 </head>
 <STYLE>A {text-decoration: none;} </STYLE>
 <body>
 
     <div class="login">
-        <span><a href="/">Back to Home page</a></span>
-        <center><h1 id="headerlogin"> Login page</h1></center></div>
+        <span><a href="/">Tillbaks till startsidan</a></span>
+        <center><h1 id="headerlogin"> Logga in</h1></center></div>
 
    <center><form action="/login" method="POST">
         <input type="text" name="username" placeholder="username"/>
         <input type="password" name="password" placeholder="password"/>
-        <input type="submit" value="login"/>
+        <input type="submit" value="Logga in"/>
     </form>
 </center>
-<body>
 
 </body>
 </html>
