--- a/src/main/resources/templates/addRestaurant.html
+++ b/src/main/resources/templates/addRestaurant.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../static/indexPage.css" th:href ="'/indexPage.css'">
-    <title>Add Restaurant</title>
+    <title>Lägg till restaurang</title>
 </head>
 <STYLE>A {text-decoration: none;} </STYLE>
 <body>
 
 <div class="addRestaurant">
-    <span><a href="/">Back to Home page</a></span>
-    <center><h1 id="headeraddrestaurant"> Add Restaurant</h1></center></div>
+    <span><a href="/">Tillbaks till startsidan</a></span>
+    <center><h1 id="headeraddrestaurant"> Lägg till restaurang</h1></center></div>
 
 <center><form action="/addRestaurant" method="POST" th:object="${restaurant}">
     <input type="text" placeholder="Namn på restaurang" th:field="*{name}"/><br>
