--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,9 +17,9 @@
 </div>
 
 <div class="title">
-    <span th:if="${session.username == null}"><a href="/login">Login</a></span>
-    <span th:if="${session.username != null}"><a href="/logout">Logout</a></span>
-    <br><span th:if="${session.username != null}"><a href="/addRestaurant">Add Restaurant</a></span>
+    <span th:if="${session.username == null}"><a href="/login">Logga in</a></span>
+    <span th:if="${session.username != null}"><a href="/logout">Logga ut</a></span>
+    <br><span th:if="${session.username != null}"><a href="/addRestaurant">Lägg till restaurang</a></span>
     <img src="../static/title.jpg" id="title" th:src="${'/title.jpg'}">
 </div>
 
