--- a/src/main/resources/templates/Booking.html
+++ b/src/main/resources/templates/Booking.html
@@ -11,7 +11,7 @@
 <body>
 <div class="booking">
     <span><a href="/">Tillbaka till startdida</a></span>
-     <center> <img src="../static/bokaBord.jpg" th:src="${'/boka.Bord.jpg'}"></center></div>
+     <center> <img src="../static/bokaBord.jpg" th:src="${'/bokaBord.jpg'}"></center></div>
 
     <center><form action="/booking" method="POST" th:object="${booking}">
 
