Fixed swenglish on startpage

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,7 +53,7 @@
     <form id="checkboxes" action="/filter_restaurants" method="post">
         <input type="checkbox" name="stroller" value="true">Visa endast barnvagnsvänliga
         <input type="checkbox" name="wheelchair" value="true">Visa endast rullstolsvänliga
-        <input type="submit" text="Filtrera">
+        <input type="submit" value="Filtrera">
 
 
 
