--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -61,12 +61,12 @@
 
     <div th:each="restaurant:${restaurants}">
         <div class="restaurantCard">
-            <span th:text="${restaurant.name}"></span> <br>
+            <a th:href="${'/view?id=' + restaurant.id}" class="cardLink" th:text="${restaurant.name}"></a> <br>
             <span th:text="${restaurant.description}"></span> <br>
             <span th:each="tomte:${restaurant.tomtar}">🎅</span>
             <span th:text="${restaurant.tomterating}"></span><br>
-            <span th:text="${restaurant.strollerOk}"></span>
-            <span th:text="${restaurant.wheelchairOk}"></span>
+            <img src="../static/barnvagns_ikon.jpg" th:if="${restaurant.strollerOk}" th:src="${'/barnvagns_ikon.jpg'}">
+            <img src="../static/rullstol.jpg" th:if="${restaurant.wheelchairOk}" th:src="${'/rullstol.jpg'}">
 
         </div>
 
